syntax = "proto3";
package order;
option go_package = "./proto";

message OrderItem {
    string product_id = 1;
    int32 quantity = 2;
    float price = 3;
}

message Order {
    string id = 1;
    string user_id = 2;
    string status = 3;
    float total_amount = 4;
    repeated OrderItem items = 5;
}

message CreateOrderRequest {
    string user_id = 1;
    repeated OrderItem items = 2;
}

message CreateOrderResponse {
    Order order = 1;
}

message GetOrderRequest {
    string id = 1;
}

message GetOrderResponse {
    Order order = 1;
}

message UpdateOrderRequest {
    string id = 1;
    string status = 2;
}

message UpdateOrderResponse {
    Order order = 1;
}

message ListOrdersRequest {
    string user_id = 1;
    int32 page = 2;
    int32 page_size = 3;
}

message ListOrdersResponse {
    repeated Order orders = 1;
    int32 total = 2;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
    rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
    rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}